# curve-apps

./: .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  Install_or_Update.bat  LICENSE  README-dev.rst  README.rst  install.bat  meta.yaml  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  py-3.12.conda-lock.yml  py-3.9.conda-lock.yml  pyproject.toml
.github/workflows/: pytest-unix-os.yaml  pytest-windows.yaml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  static-analysis.yml
curve_apps/: __init__.py  constants.py  driver.py  params.py  utils.py
curve_apps-assets/: __init__.py  curve_apps_demo.geoh5
curve_apps-assets/uijson/: contours.ui.json  edge_detection.ui.json  edges.ui.json  parts_connection.ui.json  trend_lines.ui.json
curve_apps/contours/: __init__.py  constants.py  driver.py  params.py
curve_apps/edge_detection/: __init__.py  constants.py  driver.py  params.py
curve_apps/edges/: __init__.py  driver.py  params.py
curve_apps/parts_connection/: constants.py  driver.py  params.py
curve_apps/trend_lines/: __init__.py  driver.py  params.py
devtools/: add_url_tag_sha256.py  check-copyright.py  git_message_hook.py  rename_my_app.py  run_conda_lock.py  start-app.bat
docs/: THIRD_PARTY_SOFTWARE.rst  environment.yml
docs/source/: conf.py  edge_detection.rst  getting_started.rst  index.rst  release_notes.rst  trend_lines.rst  usage.rst
docs/source/api/: curve_apps.contours.rst  curve_apps.edge_detection.rst  curve_apps.edges.rst  curve_apps.rst  curve_apps.trend_lines.rst  modules.rst
edge_detection/: __init__.py  constants.py  driver.py  main.py  params.py
edge_detection-assets/: __init__.py
edge_detection-assets/uijson/: hello.ui.json
edge_detection/commands/: __init__.py  hello_world.py
environments/: py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64.conda.lock.yml  py-3.9-linux-64-dev.conda.lock.yml  py-3.9-linux-64.conda.lock.yml  py-3.9-win-64-dev.conda.lock.yml  py-3.9-win-64.conda.lock.yml
my_app/: __init__.py  main.py
my_app/commands/: __init__.py  hello_world.py
tests/: __init__.py  assets_path_test.py  contour_test.py  edge_detection_run_test.py  parameters_test.py  params_test.py  parts_connection_run_test.py  run_test.py  trend_line_run_test.py  utils_test.py  version_test.py
