[tool.poetry]
name = "edge-detection"
version = "0.1.0-alpha.1"
license = "MIT"
description = "Find edges on 2D grids or vertices."
authors = ["Mira Geoscience <support@mirageoscience.com>"]
repository = "https://github.com/MiraGeoscience/edge-detection"
homepage = "https://mirageoscience.com"
readme = "README.rst"
packages = [
     { include = "edge_detection" },
     { include = "edge_detection-assets" },
]

# TODO: adjust classifiers
classifiers = [
    "Development Status :: 1 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Natural Language :: English",
]

[tool.poetry.scripts]
run = 'edge_detection.driver.run'

[tool.poetry.dependencies]
pydantic = {version = "~2.5", optional = true}
python = "^3.9, <3.11"
numpy = "~1.23.5"  # also geoh5py
scipy = "~1.10.1"
scikit-image = "~0.19.0"


## pip dependencies
geoh5py = {version = "~0.8.0", source = "pypi", allow-prereleases = true}
geoapps-utils = {version = "~0.2.0", source = "pypi", allow-prereleases = true}

#geoh5py = { url = "https://github.com/MiraGeoscience/geoh5py/archive/refs/heads/main.tar.gz#sha256=" }

## indirect dependencies, forcing them here for installation through Conda not pip
h5py = "*" # from geoh5py
Pillow = "*" # from geoh5py

## about pip dependencies
# to be specified to work with conda-lock
# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
# - from URL:
#   - for a tags:   my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/VERSION_TAG.zip#sha256=" }
#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.zip#sha256=" }
# Note - conda-lock does not support the syntax: my_package = { git = ... }
#        while poetry2conda supports only { git = "...", tag = "..." }, and not { url = ... }

[tool.poetry.dev-dependencies]
Pygments = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
tomli = "*"

[tool.conda-lock]
platforms = ['win-64', 'linux-64']
channels = ['conda-forge']

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
# defaults are just fine

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
scripts_are_modules = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true

plugins = [
    "numpy.typing.mypy_plugin"
]

[tool.pytest.ini_options]
addopts = "--cov edge_detection --cov-report html --cov-report term-missing:skip-covered"

[tool.coverage.run]
branch = true
source = ["edge_detection"]
omit = [
    "edge_detection/commands/hello_world.py"
]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING",
    "pragma: no cover"
]

fail_under = 80

[tool.coverage.html]
skip_empty = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
